style: fix firefox overflow

--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -15,6 +15,7 @@
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
+      max-width: 100%;
     }
     .head-drag {
       cursor: grab;
